@@ -2,24 +2,17 @@ package Run;
 
 
 import DictionaryApplication.GgTranslateTextToSpeech;
-import javafx.event.ActionEvent;
-import javafx.event.EventHandler;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
 import javafx.scene.control.Button;
 import javafx.scene.control.Label;
 import javafx.scene.control.TextArea;
-import javafx.scene.input.KeyEvent;
-import org.json.simple.JSONArray;
-import org.json.simple.JSONObject;
-import org.json.simple.parser.JSONParser;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.net.URLEncoder;
+import java.net.*;
+import java.nio.charset.StandardCharsets;
 import java.util.ResourceBundle;
 
 public class TranslateController implements Initializable {
@@ -29,24 +22,17 @@ public class TranslateController implements Initializable {
 
     @Override
     public void initialize(URL url, ResourceBundle resourceBundle) {
-        translateBtn.setOnAction(new EventHandler<ActionEvent>() {
-            @Override
-            public void handle(ActionEvent event) {
-                try {
-                    handleOnClickTranslateBtn();
-                } catch (IOException e) {
-                    e.printStackTrace();
-                }
+        translateBtn.setOnAction(event -> {
+            try {
+                handleOnClickTranslateBtn();
+            } catch (IOException e) {
+                e.fillInStackTrace();
+            } catch (URISyntaxException e) {
+                throw new RuntimeException(e);
             }
         });
 
-        sourceLangField.setOnKeyTyped(new EventHandler<KeyEvent>() {
-            @Override
-            public void handle(KeyEvent keyEvent) {
-                if (sourceLangField.getText().trim().isEmpty()) translateBtn.setDisable(true);
-                else translateBtn.setDisable(false);
-            }
-        });
+        sourceLangField.setOnKeyTyped(keyEvent -> translateBtn.setDisable(sourceLangField.getText().trim().isEmpty()));
 
         translateBtn.setDisable(true);
         toLangField.setEditable(false);
@@ -55,9 +41,9 @@ public class TranslateController implements Initializable {
 
 
     @FXML
-    private void handleOnClickTranslateBtn() throws IOException {
+    private void handleOnClickTranslateBtn() throws IOException, URISyntaxException {
         String srcText = sourceLangField.getText();
-        String trans = new String();
+        String trans;
         trans = translate(sourceLanguage,toLanguage,srcText);
         toLangField.setText(trans);
         GgTranslateTextToSpeech.play(trans,sourceLanguage);
@@ -90,15 +76,15 @@ public class TranslateController implements Initializable {
     @FXML
     private Label englishLabel , vietnameseLabel;
 
-    private static String translate(String langFrom, String langTo, String text) throws IOException {
+    private static String translate(String langFrom, String langTo, String text) throws IOException, URISyntaxException {
         // INSERT YOU URL HERE
         String urlStr = "https://script.google.com/macros/s/AKfycbzrWtn-y_EEAuij3SwdNDZc5_sHAvUxVorOSUh_Fa2eV5KNalz1Ag8JaKPhdHsYdt0r/exec" +
-                "?q=" + URLEncoder.encode(text, "UTF-8") +
+                "?q=" + URLEncoder.encode(text, StandardCharsets.UTF_8) +
                 "&target=" + langTo +
                 "&source=" + langFrom;
-        URL url = new URL(urlStr);
+        URI uri = new URI(urlStr);
         StringBuilder response = new StringBuilder();
-        HttpURLConnection con = (HttpURLConnection) url.openConnection();
+        HttpURLConnection con = (HttpURLConnection) uri.toURL().openConnection();
         con.setRequestProperty("User-Agent", "Mozilla/5.0");
         BufferedReader in = new BufferedReader(new InputStreamReader(con.getInputStream()));
         String inputLine;
